@@ -1,3 +1,7 @@
+2009-12-21  Tim Waugh  <twaugh@redhat.com>
+
+	* cupsmodule.c (cups_setPasswordCB2): Allow None.
+
 2009-12-18  Jiri Popelka  <jpopelka@redhat.com>
 
 	* cupsconnection.c (Connection.cancelJob):
